- Fixed alignment of work item efforts in view. - Fixed keeping track of consumed effort on work items while being worked on.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -45,3 +45,11 @@ li.work-item {
   padding: 10px;
   margin-top: 10px;
 }
+
+table.stage-efforts {
+  width: 100%;
+}
+
+table.stage-efforts td:first-child {
+  width: 75%;
+}
